<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:paddingLeft="2dp"
        android:drawableLeft="@drawable/username"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:id="@+id/edittext_username"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:id="@+id/edittext_password"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:id="@+id/edittext_cnf_password"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:id="@+id/btnRegister"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textColor="@color/colorRegister"
            android:id="@+id/textview_signUp"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>